--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=school-app
 
-spring.datasource.url=jdbc:mysql://localhost:3306/database1
+spring.datasource.url=jdbc:mysql://localhost:3306/school-db?createDatabaseIfNotExist=true&useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
